WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
201741
Node.replaceChild()'s pre-replacement validations are not done in the right order
https://bugs.webkit.org/show_bug.cgi?id=201741
Summary
Node.replaceChild()'s pre-replacement validations are not done in the right o...
Chris Dumez
Reported
2019-09-12 15:22:56 PDT
Node.replaceChild()'s pre-replacement validations are not done in the right order (spec order): -
https://dom.spec.whatwg.org/#concept-node-replace
In particular, we do not do check 3 (If child’s parent is not parent, then throw a "NotFoundError" DOMException.) at the right time.
Attachments
Patch
(9.63 KB, patch)
2019-09-12 15:25 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2019-09-12 15:25:57 PDT
Created
attachment 378681
[details]
Patch
Geoffrey Garen
Comment 2
2019-09-12 15:30:00 PDT
Comment on
attachment 378681
[details]
Patch r=me
WebKit Commit Bot
Comment 3
2019-09-12 17:01:52 PDT
Comment on
attachment 378681
[details]
Patch Clearing flags on attachment: 378681 Committed
r249821
: <
https://trac.webkit.org/changeset/249821
>
WebKit Commit Bot
Comment 4
2019-09-12 17:01:54 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 5
2019-09-12 17:02:17 PDT
<
rdar://problem/55323464
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug